--- a/css/styles.css
+++ b/css/styles.css
@@ -6,37 +6,41 @@ html {
   box-sizing: inherit;
 }
 body {
-  margin: 0 auto;
-  width: 1170px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 0 auto;
+  width: 1110px;
+}
+h2 {
+  text-align: center;
+  color: #515151;
+  font-size: 48px;
+  line-height: 32px;
+  text-transform: uppercase;
+  margin-bottom: 131px;
+  margin-top: 0;
 }
 
 /* Header */
 
-.site-nav .container {
-  display: flex;
-}
 .site-nav {
+  padding-bottom: 103px;
+}
+.page-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 103px;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 header .logo {
   margin: 0;
-  padding-top: 38px;
   color: #555252;
-  font-family: 'Roboto', sans-serif;
   font-size: 30px;
   font-weight: 300;
   line-height: 32px;
   text-transform: uppercase;
+  text-decoration: none;
 }
 
 .site-nav .logo:first-letter {
@@ -68,7 +72,6 @@ header .link {
 .nav {
   margin: 0;
   padding: 0;
-  padding-top: 43px;
   display: flex;
   list-style: none;
   text-decoration: none;
@@ -79,23 +82,12 @@ header .link {
 
 .main {
   color: #515151;
-  font-family: 'Roboto', sans-serif;
   font-size: 48px;
   font-weight: 400;
   line-height: 32px;
   text-transform: uppercase;
+  margin-bottom: 105px;
 }
-.main-header {
-  text-align: center;
-  color: #515151;
-  font-family: 'Roboto';
-  font-size: 48px;
-  line-height: 32px;
-  text-transform: uppercase;
-  margin-bottom: 131px;
-  margin-top: 0;
-}
-
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -179,17 +171,6 @@ header .link {
 
 /* Blog */
 
-.blog-header {
-  color: #555252;
-  font-family: 'Roboto', sans-serif;
-  font-size: 48px;
-  line-height: 32px;
-  text-transform: uppercase;
-  margin-top: 105px;
-  text-align: center;
-  margin-bottom: 120px;
-}
-
 .blog-list {
   display: flex;
   padding-top: 120px;
@@ -198,13 +179,14 @@ header .link {
   margin: 0;
   padding-bottom: 81px;
 }
-
+.blog-name {
+  margin-bottom: 14px;
+}
 .blog-name {
   color: #555252;
   font-family: 'Open Sans';
   font-size: 18px;
   line-height: 26px;
-  padding-top: 14px;
   margin: 0;
   margin-bottom: 43px;
 }
@@ -216,22 +198,27 @@ header .link {
   font-weight: 400;
   line-height: 26px;
   margin: 0;
-  margin-top: 47px;
+  margin-bottom: 17px;
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: #ffffff;
-  width: 159px;
-  height: 51px;
+  width: 160px;
+  height: 50px;
   background-color: #4ec6ab;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 26px;
-  margin-top: 17px;
   border-radius: 3px;
   border: 0px;
+}
+.button:hover {
+  opacity: 0.6;
 }
 
 .blog-item {
